out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In member function ‘virtual std::string reg_selection::str()’:
3ac.cpp:244:27: error: no matching function for call to ‘std::__cxx11::basic_string<char>::append(reg&)’
  244 |   string_fmt.append(*ident);
      |                           ^
In file included from /usr/include/c++/9.1.0/string:55,
                 from /usr/include/c++/9.1.0/bitset:47,
                 from symbol_table.h:4,
                 from 3ac.h:4,
                 from 3ac.cpp:1:
/usr/include/c++/9.1.0/bits/basic_string.h:1221:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1221 |       append(const basic_string& __str)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1221:34: note:   no known conversion for argument 1 from ‘reg’ to ‘const std::__cxx11::basic_string<char>&’
 1221 |       append(const basic_string& __str)
      |              ~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1238:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
 1238 |       append(const basic_string& __str, size_type __pos, size_type __n = npos)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1238:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/9.1.0/bits/basic_string.h:1250:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _CharT*, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
 1250 |       append(const _CharT* __s, size_type __n)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1250:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/9.1.0/bits/basic_string.h:1263:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1263 |       append(const _CharT* __s)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1263:28: note:   no known conversion for argument 1 from ‘reg’ to ‘const char*’
 1263 |       append(const _CharT* __s)
      |              ~~~~~~~~~~~~~~^~~
/usr/include/c++/9.1.0/bits/basic_string.h:1280:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, _CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
 1280 |       append(size_type __n, _CharT __c)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1280:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/9.1.0/bits/basic_string.h:1290:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1290 |       append(initializer_list<_CharT> __l)
      |       ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1290:39: note:   no known conversion for argument 1 from ‘reg’ to ‘std::initializer_list<char>’
 1290 |       append(initializer_list<_CharT> __l)
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/9.1.0/bits/basic_string.h:1309:9: note: candidate: ‘template<class _InputIterator, class> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(_InputIterator, _InputIterator) [with _InputIterator = _InputIterator; <template-parameter-2-2> = <template-parameter-1-2>; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1309 |         append(_InputIterator __first, _InputIterator __last)
      |         ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1309:9: note:   template argument deduction/substitution failed:
3ac.cpp:244:27: note:   candidate expects 2 arguments, 1 provided
  244 |   string_fmt.append(*ident);
      |                           ^
In file included from /usr/include/c++/9.1.0/string:55,
                 from /usr/include/c++/9.1.0/bitset:47,
                 from symbol_table.h:4,
                 from 3ac.h:4,
                 from 3ac.cpp:1:
/usr/include/c++/9.1.0/bits/basic_string.h:1320:9: note: candidate: ‘template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _Tp&) [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1320 |         append(const _Tp& __svt)
      |         ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1320:9: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/9.1.0/bits/move.h:55,
                 from /usr/include/c++/9.1.0/bits/stl_pair.h:59,
                 from /usr/include/c++/9.1.0/bits/stl_algobase.h:64,
                 from /usr/include/c++/9.1.0/bits/char_traits.h:39,
                 from /usr/include/c++/9.1.0/string:40,
                 from /usr/include/c++/9.1.0/bitset:47,
                 from symbol_table.h:4,
                 from 3ac.h:4,
                 from 3ac.cpp:1:
/usr/include/c++/9.1.0/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using enable_if_t = typename std::enable_if::type [with bool _Cond = std::integral_constant<bool, false>::value; _Tp = std::__cxx11::basic_string<char>&]’:
/usr/include/c++/9.1.0/bits/basic_string.h:117:8:   required by substitution of ‘template<class _CharT, class _Traits, class _Alloc> template<class _Tp, class _Res> using _If_sv = std::enable_if_t<std::__and_<std::is_convertible<const _Tp&, std::basic_string_view<_CharT, _Traits> >, std::__not_<std::is_convertible<const _Tp*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>*> >, std::__not_<std::is_convertible<const _Tp&, const _CharT*> > >::value, _Res> [with _Tp = reg; _Res = std::__cxx11::basic_string<char>&; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
/usr/include/c++/9.1.0/bits/basic_string.h:1320:9:   required by substitution of ‘template<class _Tp> std::__cxx11::basic_string<char>::_If_sv<_Tp, std::__cxx11::basic_string<char>&> std::__cxx11::basic_string<char>::append<_Tp>(const _Tp&) [with _Tp = reg]’
3ac.cpp:244:27:   required from here
/usr/include/c++/9.1.0/type_traits:2426:11: error: no type named ‘type’ in ‘struct std::enable_if<false, std::__cxx11::basic_string<char>&>’
 2426 |     using enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~
In file included from /usr/include/c++/9.1.0/string:55,
                 from /usr/include/c++/9.1.0/bitset:47,
                 from symbol_table.h:4,
                 from 3ac.h:4,
                 from 3ac.cpp:1:
/usr/include/c++/9.1.0/bits/basic_string.h:1335:2: note: candidate: ‘template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _Tp&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
 1335 |  append(const _Tp& __svt, size_type __pos, size_type __n = npos)
      |  ^~~~~~
/usr/include/c++/9.1.0/bits/basic_string.h:1335:2: note:   template argument deduction/substitution failed:
3ac.cpp:244:27: note:   candidate expects 3 arguments, 1 provided
  244 |   string_fmt.append(*ident);
      |                           ^
3ac.cpp: In member function ‘virtual reg* reg_selection::deep_copy()’:
3ac.cpp:251:37: error: ‘struct reg’ has no member named ‘deepcopy’; did you mean ‘deep_copy’?
  251 |   reg *r = new reg_selection(ident->deepcopy(),sname,field);
      |                                     ^~~~~~~~
      |                                     deep_copy
make: *** [Makefile:55: 3ac.o] Error 1
